--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
-spring.application.name=AlmoraFinal
+spring.application.name=AlmoraFinal 
+
+spring.datasource.url=jdbc:mysql://localhost:3306/almoraEcommerceDB?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Pratham@1502
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Server port (optional)
+server.port=8080
+
+
+# SMTP Configuration (example for Gmail)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= prathamgarg1502@gmail.com
+spring.mail.password= Pratham,1502
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
