--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=8080
 
 
-# SMTP Configuration (example for Gmail)
+# SMTP Configurations (example for Gmail)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username= prathamgarg1502@gmail.com
